[metadata]
name = flexcv_earth
version = 0.1.0alpha
author = Fabian Rosenthal
author_email = rosenthal.fabian@gmail.com
description = Warpper classes for the R-package earth to use it with flexcv
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/radlfabs/flexcv-earth
